--- a/app/src/main/res/layout/activity_disc_detail.xml
+++ b/app/src/main/res/layout/activity_disc_detail.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,12 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginBottom="16dp"/>
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/imageSlider"
+        android:padding="16dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/nameTextView"
-        android:layout_width="379dp"
+        android:layout_width="358dp"
         android:layout_height="68dp"
-        android:text="Game Name"
+        android:text="Название:"
         android:textAlignment="center"
         android:textSize="34sp"
         android:textStyle="bold" />
@@ -32,7 +40,7 @@
             android:layout_height="35dp"
             android:layout_marginStart="188dp"
             android:layout_marginTop="8dp"
-            android:text="Genre:"
+            android:text="Жанр:"
             android:textAlignment="viewStart"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -46,7 +54,7 @@
             android:layout_width="178dp"
             android:layout_height="40dp"
             android:layout_marginTop="8dp"
-            android:text="Age"
+            android:text="Возр. рейтинг:"
             android:textAlignment="viewStart"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -61,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Description"
+        android:text="Описание:"
         android:textSize="16sp" />
 
     <TextView
@@ -69,7 +77,7 @@
         android:layout_width="376dp"
         android:layout_height="43dp"
         android:layout_marginTop="8dp"
-        android:text="Price"
+        android:text="Цена"
         android:textAlignment="center"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="24sp" />
@@ -81,5 +89,15 @@
         android:text="Избранное"
         android:textSize="24sp"
         app:backgroundTint="@color/red"/>
-
-</LinearLayout>
+    </LinearLayout>
+    </ScrollView>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/previous"
+        app:backgroundTint="@color/red"/>
+</RelativeLayout>
