--- a/app/src/main/res/layout/item_game_disc.xml
+++ b/app/src/main/res/layout/item_game_disc.xml
@@ -23,27 +23,29 @@
 
         <TextView
             android:id="@+id/nameTextView"
-            android:layout_width="match_parent"
+            android:layout_width="238dp"
             android:layout_height="wrap_content"
             android:text="Game Name"
-            android:textStyle="bold"
-            android:textSize="16sp" />
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/priceTextView"
+            android:layout_width="232dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Цена"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/descriptionTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:text="Description"
-            android:textSize="14sp"
-            android:layout_marginTop="4dp" />
-
-        <TextView
-            android:id="@+id/priceTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Цена"
-            android:textStyle="bold"
-            android:textColor="@android:color/holo_red_dark"
-            android:layout_marginTop="8dp" />
+            android:textSize="14sp" />
     </LinearLayout>
 </LinearLayout>
