--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,8 @@
     <item name="android:textColor">@android:color/white</item>
     <item name="android:buttonStyle">@style/CustomButtonStyle</item>
     <item name="android:textColorLink">@android:color/white</item>
-        </style>
+        <item name="android:statusBarColor">@color/red</item>
+
+    </style>
 
 </resources>
