--- a/app/src/main/res/layout/item_game_disc.xml
+++ b/app/src/main/res/layout/item_game_disc.xml
@@ -4,15 +4,18 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="16dp"
-    android:layout_marginBottom="8dp"
-    android:background="?android:attr/selectableItemBackground">
+    android:layout_marginBottom="15dp"
+    android:background="@color/red">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="122dp"
+        android:layout_weight="1"
+        android:scaleType="fitXY"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/ic_launcher_background" />
+        android:src="@drawable/ic_launcher_background"
+        android:background="@color/black"/>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -23,8 +26,10 @@
 
         <TextView
             android:id="@+id/nameTextView"
-            android:layout_width="238dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="76dp"
+            android:background="@color/black"
+            android:gravity="center"
             android:text="Game Name"
             android:textAlignment="center"
             android:textSize="16sp"
@@ -32,20 +37,15 @@
 
         <TextView
             android:id="@+id/priceTextView"
-            android:layout_width="232dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
             android:layout_marginTop="8dp"
+            android:background="@color/black"
+            android:gravity="center"
             android:text="Цена"
             android:textAlignment="center"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@color/red"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/descriptionTextView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Description"
-            android:textSize="14sp" />
     </LinearLayout>
 </LinearLayout>
