--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,15 +13,22 @@
         <item name="android:background">@color/red</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
-    <style name="CustomDatePickerDialog" parent="Theme.MaterialComponents.Light.Dialog">
+    <style name="CustomDatePickerDialog" parent="Theme.MaterialComponents.Dialog">
+        <item name="android:background">@color/black</item>
         <item name="colorAccent">@color/red</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:buttonStyle">@style/CustomDialogButton</item>
         <item name="android:datePickerDialogTheme">@style/CustomDatePickerTheme</item>
     </style>
-
+    <style name="CustomDialogButton" parent="Theme.MaterialComponents.Light.Dialog">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
     <style name="CustomDatePickerTheme">
-        <item name="android:background">@color/black</item>
-        <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:background">@color/red</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@color/red</item>
+        <item name="android:buttonStyle">@style/CustomDialogButton</item>
     </style>
     <style name="DarkAlertDialog" parent="Theme.MaterialComponents.Dialog.Alert">
         <item name="android:background">#121212</item>
