--- a/app/src/main/res/layout/activity_edit_disc.xml
+++ b/app/src/main/res/layout/activity_edit_disc.xml
@@ -5,7 +5,9 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="16dp">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -77,6 +79,7 @@
             android:layout_marginBottom="16dp"
             app:backgroundTint="@color/red"/>
     </LinearLayout>
+    </ScrollView>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabBack"
         android:layout_width="wrap_content"
